# lobster

./: Cargo.toml  README.md
bins/lobster-api/: Cargo.toml
bins/lobster-api/src/: main.rs
bins/lobster-bench/: Cargo.toml
bins/lobster-bench/src/: main.rs
bins/lobster-client/: Cargo.toml
bins/lobster-client/src/: main.rs
bins/lobster-server/: Cargo.toml
bins/lobster-server/src/: main.rs
crates/lobster-core/: Cargo.toml
crates/lobster-core/src/: lib.rs
crates/lobster-db/: Cargo.toml
crates/lobster-db/migrations/: 20260323212427_create_trades.sql
crates/lobster-db/src/: lib.rs
crates/lobster-engine/: Cargo.toml
crates/lobster-engine/src/: lib.rs
crates/lobster-proto/: Cargo.toml  order.fbs
crates/lobster-proto/src/: lib.rs  order_generated.rs
