[package]
name = "lobster-server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
lobster-core = { path = "../../crates/lobster-core" }
lobster-engine = { path = "../../crates/lobster-engine" }
lobster-proto = { path = "../../crates/lobster-proto" }
lobster-db = { path = "../../crates/lobster-db" }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
